# hack_med

./: pyproject.toml
hack_med/: __init__.py  config.py  run.py
hack_med/bl_models/: doctor_bl.py  user_bl.py
hack_med/client/: client_routes.py
hack_med/communications/: videocall.py
hack_med/dal_models/: doctor_dal.py  user_dal.py
hack_med/doctor/: __init__.py  doctor_routes.py
hack_med/feedback/: __init__.py  feedback_routes.py
hack_med/gigachat_api/: utils.py
hack_med/registration_autorise/: __init__.py  doctor_reg_routers.py  user_reg_routers.py
hack_med/requests/: request_routes.py
