[tool.poetry]
name = "hack-it-park"
version = "0.1.0"
description = ""
authors = ["Gapenysh <bulathai2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
psycopg2 = "^2.9.10"
flask-cors = "^5.0.0"
flask-jwt-extended = "^4.7.1"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.1"
flask-socketio = "^5.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
